# AutoGLM-Distributed-Online

./: .gitignore  CLAUDE.md  README.md  debug_ws_console_flow.py  model_response.txt  model_response_full.txt
Client/: DESIGN.md  README.md  TDD_DEVELOPMENT.md  main.py  pyproject.toml  pytest.ini  requirements.txt
Client/src/: __init__.py
Client/src/adapters/: __init__.py  adb_adapter.py  android_app_index.py  base.py  hdc_adapter.py  wda_adapter.py
Client/src/config/: __init__.py
Client/src/logging/: __init__.py  logger.py
Client/src/network/: __init__.py  http_client.py  messages.py  websocket.py
Client/src/polling/: __init__.py  factory.py  manager.py  unified_polling.py
Client/src/screenshot/: __init__.py  manager.py
Client/tests/: conftest.py
Client/tests/unit/: test_main_request_screenshot.py
Client/tests/unit/test_adapters/: test_adb_adapter.py  test_android_app_index.py  test_hdc_adapter.py  test_wda_adapter.py
Client/tests/unit/test_executor/: test_interpreter.py  test_task_executor.py
Client/tests/unit/test_logging/: test_logger.py
Client/tests/unit/test_network/: test_messages.py  test_websocket.py
Client/tests/unit/test_polling/: test_polling.py
Client/tests/unit/test_screenshot/: test_manager.py
Client/tests/unit/test_state/: test_device_state.py
Server/: .env.example  DESIGN.md  architecture.md  architecture.puml  executor_client.py  minimal_client.py  pyproject.toml  requirements.txt  server_phone_agent.py  storage.yaml  websocket_flow.puml
Server/docs/: ReAct处理文档.md
Server/src/: __init__.py  config.py  database.py  logging_config.py  main.py
Server/src/api/: __init__.py  devices.py  logs.py  tasks.py  ws.py
Server/src/models/: __init__.py  models.py
Server/src/network/: message_types.py
Server/src/schemas/: __init__.py  schemas.py
Server/src/services/: __init__.py  action_parser.py  action_router.py  device_status_manager.py  file_storage.py  react_callbacks.py  react_scheduler.py  react_scheduler_design.md  react_types.py  websocket.py  websocket_callbacks.py
Server/tests/: test_action_router.py  test_device_status_manager.py  test_react_scheduler_ownership.py  test_react_scheduler_prompt.py  test_tasks_api.py
Web/: DESIGN.md  package-lock.json  package.json  playwright.config.ts  requirements.txt  sharedConfig.ts  test_debug.cjs  test_send.js  tsconfig.e2e.json  tsconfig.node.json  vite.config.ts
docs/: API.md  (+4 more)
(+32 files in other folders)
